[package]
name = "cosmo_transition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.8", features = ["rayon"] }
peroxide = { version = "0.35.1", features = ["plot"] }
rayon = "1.10.0"
